style.css
@font-face {
    font-family: "General-Font-Family";
    src: url("./assets/fonts/AmazingKids.otf");
}

.container{
    
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80vh;
    margin-top: 4rem;
    font-size: 3rem;
}

.timer-container{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 350px;
    border: 7px solid black;
    border-radius: 8px;
    height: 350px;
}

.image{
   width: 300px;
   position: absolute;
   top: -140px;
   left: 27px;
}

.header{
    font-family: "General-Font-Family";
    text-transform: uppercase;
}

.time{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    display: flex;
    gap: 0.5rem;
    margin-top: 1rem;
}

.buttons{
    display: flex;
    gap: 1rem;
    
}

button{
    cursor: pointer;
    padding: 10px 20px;
    border: none;
    border-radius: 8px;
    color: white;
    font-weight: bold;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.hour{
    position: relative;
}
.hour::before{
    content: "HOUR";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    left: 15px;
}
.minute{
    position: relative;
}
.minute::before{
    content: "MINUTE";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    left: 7px;
}
.second{
    position: relative;
}
.second::before{
    content: "SECOND";
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    left: 6px;
}
.splite-second{
    position: relative;
}
.splite-second::before{
    content: "CENTISECOND";
    text-align: center;
    font-weight: 400;
    color: gray;
    font-size: 0.7rem;
    position: absolute;
    left: -2px;
}



#start{
    background-color: green;
}
#stop{
    background-color: red;
}
#clear{
    background-color: blue;
}

